--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@material-ui/core": "^4.4.0",
 		"@material-ui/styles": "^4.3.3",
+		"@testing-library/jest-dom": "^4.1.0",
 		"enzyme": "^3.10.0",
 		"enzyme-adapter-react-16": "^1.14.0",
 		"eslint-config-airbnb": "^18.0.1",
@@ -30,20 +31,33 @@
 		"extends": "react-app"
 	},
 	"jest": {
-		"collectCoverageFrom": [ "**/src/**/*.{js,jsx,ts,tsx}" ],
+		"collectCoverageFrom": [
+			"**/src/**/*.{js,jsx,ts,tsx}"
+		],
 		"coveragePathIgnorePatterns": [
 			"<rootDir>/node_modules",
 			"<rootDir>/src/setupTests.js",
 			"<rootDir>/src/index.js",
 			"<rootDir>/src/App/header/Header.js"
 		],
-		"snapshotSerializers": [ "jest-serializer-html" ]
+		"snapshotSerializers": [
+			"jest-serializer-html"
+		]
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	},
 	"devDependencies": {
+		"@testing-library/react": "^9.1.4",
 		"eslint": "^6.3.0",
 		"eslint-config-prettier": "^6.2.0",
 		"eslint-plugin-prettier": "^3.1.0",
