--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,30 @@ client/coverage
 
 # production
 /build
+
+
+.nyc_output
+coverage
+test/fixtures/output.js*
+coverage.lcov
+*.log
+logs
+npm-debug.log*
+.eslintcache
+/coverage
+/dist
+/local
+/reports
+/node_modules
+.DS_Store
+Thumbs.db
+.idea
+.vscode
+*.sublime-project
+*.sublime-workspace
+*hot-update*.*
+output*.js
+output.js.map
+test/output
+/coverage.data
+/coverage/
