--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
 		"@material-ui/core": "^4.4.0",
 		"@material-ui/styles": "^4.3.3",
 		"@testing-library/jest-dom": "^4.1.0",
+		"axios": "^0.19.0",
 		"enzyme": "^3.10.0",
 		"enzyme-adapter-react-16": "^1.14.0",
 		"eslint-config-airbnb": "^18.0.1",
@@ -13,6 +14,8 @@
 		"eslint-plugin-import": "^2.18.2",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-react": "^7.14.3",
+		"http-proxy-middleware": "^0.20.0",
+		"is-isbn": "^1.1.0",
 		"material-ui": "^0.20.2",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
@@ -31,30 +34,18 @@
 		"extends": "react-app"
 	},
 	"jest": {
-		"collectCoverageFrom": [
-			"**/src/**/*.{js,jsx,ts,tsx}"
-		],
+		"collectCoverageFrom": [ "**/src/**/*.{js,jsx,ts,tsx}" ],
 		"coveragePathIgnorePatterns": [
 			"<rootDir>/node_modules",
 			"<rootDir>/src/setupTests.js",
 			"<rootDir>/src/index.js",
 			"<rootDir>/src/App/header/Header.js"
 		],
-		"snapshotSerializers": [
-			"jest-serializer-html"
-		]
+		"snapshotSerializers": [ "jest-serializer-html" ]
 	},
 	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
 	},
 	"devDependencies": {
 		"@testing-library/react": "^9.1.4",
