--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,10 @@
 		"@material-ui/styles": "^4.3.3",
 		"@testing-library/jest-dom": "^4.1.0",
 		"axios": "^0.19.0",
+		"babel-eslint": "^10.0.3",
 		"enzyme": "^3.10.0",
 		"enzyme-adapter-react-16": "^1.14.0",
-		"eslint-config-airbnb": "^18.0.1",
 		"eslint-import-resolver-webpack": "^0.11.1",
-		"eslint-plugin-import": "^2.18.2",
-		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-react": "^7.14.3",
 		"http-proxy-middleware": "^0.20.0",
 		"is-isbn": "^1.1.0",
 		"material-ui": "^0.20.2",
@@ -28,30 +25,56 @@
 		"test": "react-scripts test --verbose=false",
 		"eject": "react-scripts eject",
 		"test:watch": "react-scripts test --watch --verbose=false",
-		"test:coverage": "react-scripts test --coverage --colors"
+		"test:coverage": "react-scripts test --coverage --colors",
+		"lint": "eslint ./src --fix"
 	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+    "*.js": ["eslint ./src --fix", "git add"]
+  },
 	"eslintConfig": {
 		"extends": "react-app"
 	},
 	"jest": {
-		"collectCoverageFrom": [ "**/src/**/*.{js,jsx,ts,tsx}" ],
+		"collectCoverageFrom": [
+			"**/src/**/*.{js,jsx,ts,tsx}"
+		],
 		"coveragePathIgnorePatterns": [
 			"<rootDir>/node_modules",
 			"<rootDir>/src/setupTests.js",
 			"<rootDir>/src/index.js",
 			"<rootDir>/src/App/header/Header.js"
 		],
-		"snapshotSerializers": [ "jest-serializer-html" ]
+		"snapshotSerializers": [
+			"jest-serializer-html"
+		]
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	},
 	"devDependencies": {
 		"@testing-library/react": "^9.1.4",
 		"eslint": "^6.3.0",
+		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-prettier": "^6.2.0",
+		"eslint-plugin-import": "^2.18.2",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-prettier": "^3.1.0",
+		"eslint-plugin-react": "^7.14.3",
+		"eslint-plugin-react-hooks": "^1.7.0",
 		"husky": "^3.0.5",
 		"jest-serializer-html": "^7.0.0",
 		"lint-staged": "^9.2.5",
