--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
 		"eslint-import-resolver-webpack": "^0.11.1",
 		"http-proxy-middleware": "^0.20.0",
 		"is-isbn": "^1.1.0",
+		"lodash": "^4.17.15",
 		"material-ui": "^0.20.2",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
@@ -34,8 +35,11 @@
 		}
 	},
 	"lint-staged": {
-    "*.js": ["eslint ./src --fix", "git add"]
-  },
+		"*.js": [
+			"eslint --fix ./src",
+			"git add"
+		]
+	},
 	"eslintConfig": {
 		"extends": "react-app"
 	},
