--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -23,6 +23,8 @@
         "react-hooks"
     ],
     "rules": {
+        "no-console": ["error", { "allow": ["info", "warn", "error"] }],
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
         "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
     }
