Lint fixes and bookshelf, results, book setup

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -24,7 +24,7 @@
     "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
     "no-trailing-spaces": 1, // disallow trailing whitespace at the end of lines
     "semi": [1, "never"], // require or disallow use of semicolons instead of ASI
-
+    "react/require-default-props": 0,
     "block-scoped-var": 0, // treat var statements as if they were block scoped (off by default). 0: deep destructuring is not compatible https://github.com/eslint/eslint/issues/1863
     "complexity": 0, // specify the maximum cyclomatic complexity allowed in a program (off by default)
     "consistent-return": 2, // require return statements to either always or never specify values
