--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.0",
+    "@material-ui/icons": "^4.4.1",
     "@material-ui/styles": "^4.3.3",
     "@testing-library/jest-dom": "^4.1.0",
     "axios": "^0.19.0",
-    "babel-eslint": "^10.0.3",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint-import-resolver-webpack": "^0.11.1",
@@ -16,6 +16,7 @@
     "lodash": "^4.17.15",
     "material-ui": "^0.20.2",
     "pretty-quick": "^1.11.1",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
@@ -27,7 +28,7 @@
     "test": "react-scripts test --verbose=false",
     "eject": "react-scripts eject",
     "test:watch": "react-scripts test --watch --verbose=false",
-    "test:coverage": "react-scripts test --coverage --colors",
+    "test:coverage": "react-scripts test --coverage --colors --watchAll=true",
     "lint": "eslint ./src --fix"
   },
   "husky": {
@@ -47,13 +48,16 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "**/src/**/*.{js,jsx,ts,tsx}"
+      "src/**/*.{js,jsx,ts,tsx}"
     ],
     "coveragePathIgnorePatterns": [
       "<rootDir>/node_modules",
       "<rootDir>/src/setupTests.js",
+      "<rootDir>/src/setupProxy.js",
       "<rootDir>/src/index.js",
-      "<rootDir>/src/App/header/Header.js"
+      "<rootDir>/src/App/header/Header.js",
+      "<rootDir>/src/config/",
+      "<rootDir>/src/util/constants.js"
     ],
     "snapshotSerializers": [
       "jest-serializer-html"
