--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,12 @@
 		"prop-types": "^15.7.2",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
+		"react-redux": "^7.1.1",
 		"react-scripts": "3.1.1",
-		"react-swipeable-views": "^0.13.3"
+		"react-swipeable-views": "^0.13.3",
+		"redux": "^4.0.4",
+		"redux-devtools-extension": "^2.13.8",
+		"redux-thunk": "^2.3.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
