--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,10 @@
 		"eject": "react-scripts eject",
 		"test:watch": "react-scripts test --watch --verbose=false",
 		"test:coverage": "react-scripts test --coverage --colors --watchAll=true",
-		"lint": "eslint ./src --fix"
+		"lint": "eslint ./src --fix",
+		"fix": "npm run fix:eslint && npm run fix:prettier",
+		"fix:eslint": "eslint --fix \"**/*.*\"",
+		"fix:prettier": "prettier --write \"**/*.*\""
 	},
 	"husky": {
 		"hooks": {
@@ -41,7 +44,7 @@
 		}
 	},
 	"lint-staged": {
-		"*.js": [ "eslint --fix ./src", "git add" ]
+		"*.js": [ "prettier --write ", "git add" ]
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -67,10 +70,10 @@
 		"@testing-library/react": "^9.1.4",
 		"eslint": "^6.3.0",
 		"eslint-config-airbnb": "^18.0.1",
-		"eslint-config-prettier": "^6.2.0",
+		"eslint-config-prettier": "^6.4.0",
 		"eslint-plugin-import": "^2.18.2",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-prettier": "^3.1.0",
+		"eslint-plugin-prettier": "^3.1.1",
 		"eslint-plugin-react": "^7.14.3",
 		"eslint-plugin-react-hooks": "^1.7.0",
 		"husky": "^3.0.5",
