--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
 		"@material-ui/styles": "^4.3.3",
 		"@testing-library/jest-dom": "^4.1.0",
 		"axios": "^0.19.0",
+		"axios-mock-adapter": "^1.17.0",
 		"enzyme": "^3.10.0",
 		"enzyme-adapter-react-16": "^1.14.0",
 		"eslint-import-resolver-webpack": "^0.11.1",
@@ -44,13 +45,18 @@
 		}
 	},
 	"lint-staged": {
-		"*.js": [ "prettier --write ", "git add" ]
+		"*.js": [
+			"prettier --write ",
+			"git add"
+		]
 	},
 	"eslintConfig": {
 		"extends": "react-app"
 	},
 	"jest": {
-		"collectCoverageFrom": [ "src/**/*.{js,jsx,ts,tsx}" ],
+		"collectCoverageFrom": [
+			"src/**/*.{js,jsx,ts,tsx}"
+		],
 		"coveragePathIgnorePatterns": [
 			"<rootDir>/node_modules",
 			"<rootDir>/src/setupTests.js",
@@ -60,11 +66,21 @@
 			"<rootDir>/src/config/",
 			"<rootDir>/src/util/constants.js"
 		],
-		"snapshotSerializers": [ "jest-serializer-html" ]
+		"snapshotSerializers": [
+			"jest-serializer-html"
+		]
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	},
 	"devDependencies": {
 		"@testing-library/react": "^9.1.4",
