--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
 		"react-swipeable-views": "^0.13.3",
 		"redux": "^4.0.4",
 		"redux-devtools-extension": "^2.13.8",
+		"redux-mock-store": "^1.5.3",
 		"redux-thunk": "^2.3.0"
 	},
 	"scripts": {
