--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
 		"react-redux": "^7.1.1",
 		"react-scripts": "3.1.1",
 		"react-swipeable-views": "^0.13.3",
+		"react-tooltip": "^3.11.1",
 		"redux": "^4.0.4",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-mock-store": "^1.5.3",
