--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
 		"react-dom": "^16.9.0",
 		"react-redux": "^7.1.1",
 		"react-scripts": "3.1.1",
+		"react-select": "^3.0.8",
 		"react-swipeable-views": "^0.13.3",
 		"react-tooltip": "^3.11.1",
 		"redux": "^4.0.4",
