--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
 		"react-select": "^3.0.8",
 		"react-swipeable-views": "^0.13.3",
 		"react-tooltip": "^3.11.1",
+		"react-x-editable": "0.0.10-beta",
 		"redux": "^4.0.4",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-mock-store": "^1.5.3",
