--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "bookshelf",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "client-install": "npm install --prefix client",
-    "install-all": "npm install && npm install --prefix client",
-    "test": "cd client && npm test; cd ../",
-    "test:coverage": "cd client && npm run test:coverage; cd ../",
-    "lint": "cd client && npm run lint; cd ../",
-    "start": "node server.js",
-    "server": "nodemon server.js",
-    "start:dev": "NODE_ENV=dev node server.js",
-    "server:dev": "NODE_ENV=dev nodemon server.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"NODE_ENV=dev npm run server\" \"npm run client\" \"java -jar goodreadsbookshelf-0.0.1-SNAPSHOT.jar\"",
-    "prod": "concurrently \"NODE_ENV=prod npm run server\" \"npm run client\" \"java -jar goodreadsbookshelf-0.0.1-SNAPSHOT.jar\"",
-    "offline": "concurrently \"NODE_ENV=offline npm run server\" \"npm run client\""
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cheerio": "^1.0.0-rc.3",
-    "concurrently": "^4.1.2",
-    "express": "^4.17.1",
-    "google-books-search": "^0.3.1",
-    "lodash": "^4.17.15",
-    "mongoose": "^5.6.12",
-    "nodemon": "^1.19.2",
-    "random-words": "^1.1.0",
-    "request": "^2.88.0"
-  }
+	"name": "bookshelf",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"client-install": "npm install --prefix client",
+		"install-all": "npm install && npm install --prefix client",
+		"test": "cd client && npm test; cd ../",
+		"test:coverage": "cd client && npm run test:coverage; cd ../",
+		"lint": "cd client && npm run lint; cd ../",
+		"start": "node server.js",
+		"server": "nodemon server.js",
+		"start:dev": "NODE_ENV=dev node server.js",
+		"server:dev": "NODE_ENV=dev nodemon server.js",
+		"client": "npm start --prefix client",
+		"dev": "concurrently \"NODE_ENV=dev npm run server\" \"npm run client\" \"java -jar goodreadsbookshelf-0.0.1-SNAPSHOT.jar\"",
+		"stg": "concurrently \"NODE_ENV=stg npm run server\" \"npm run client\" \"java -jar goodreadsbookshelf-0.0.1-SNAPSHOT.jar\"",
+		"prod": "concurrently \"NODE_ENV=prod npm run server\" \"npm run client\" \"java -jar goodreadsbookshelf-0.0.1-SNAPSHOT.jar\"",
+		"offline": "concurrently \"NODE_ENV=offline npm run server\" \"npm run client\""
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"cheerio": "^1.0.0-rc.3",
+		"concurrently": "^4.1.2",
+		"express": "^4.17.1",
+		"google-books-search": "^0.3.1",
+		"lodash": "^4.17.15",
+		"mongoose": "^5.6.12",
+		"nodemon": "^1.19.2",
+		"random-words": "^1.1.0",
+		"request": "^2.88.0"
+	}
 }
